Change Loading text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <!--Copyright (C) Swastik Roy, 2018-->
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Lambda Calculus Evaluator">
-        <meta name="keywords" content="Lambda Calculus, Lambda, Functional Programming">
+        <meta name="description" content="Lexical Analyzer">
+        <meta name="keywords" content="Lexical Analyzer, Lexer, Regular EXpressions, Tokenizer">
         <meta name="author" content="Swastik Roy">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Lexical Analyzer JS</title>
@@ -29,7 +29,7 @@
     </head>
     <body>
         <div style="text-align:center; margin-top:80px;" class="my-preloader">
-            <h4>Loading Lambda Evaluator</h4>
+            <h4>Loading Lexical Analyzer</h4>
             <div class="spinner">
                 <div class="dot1"></div>
                 <div class="dot2"></div>
